# prometheus_client_cpp

./: .gitignore  CMakeLists.txt  README.md
include/prometheus/: prometheus.hpp  text_exposition.hpp
src/prometheus/: text_exposition.cpp
test/: CMakeLists.txt  collector_registry_test.cpp  custom_collector_test.cpp  performance_test.cpp  text_exposition_parser.cpp  text_exposition_parser.hpp  text_exposition_parser_test.cpp  text_exposition_test.cpp  unit_test.cpp
